# fraud_detection_engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.llm  Dockerfile.mv  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: api_health.py  api_policy.py  api_process.py  api_rule.py  api_stats.py  api_transaction.py  api_user.py
app/db/: mongo.py
app/models/: base.py
app/seeder/: seeder.py
app/services/: service_policy.py  service_process.py  service_rule.py  service_stats.py  service_transaction.py  service_user.py
llm_module/: Dockerfile  main.py  pyproject.toml
llm_module/analysis/: recommendation_builder.py
llm_module/core/: llm_provider.py
llm_module/llm_module/: main.py
llm_module/llm_module/agent/: policy_agent.py  tools.py
llm_module/llm_module/audit/: audit_logger.py
llm_module/llm_module/core/: llm_provider.py
llm_module/llm_module/rag_engine/: embedder.py  loader.py  retriever.py
llm_module/llm_module/summarizer/: policy_summary.py  structured_extractor.py
llm_module/llm_module/uploader/: regulation_uploader.py
llm_module/llm_module/validator/: rule_schema_validatoin.py  rule_schema_validator.py
llm_module/rag_engine/: embedder.py
llm_module/summarizer/: policy_summary.py
scripts/: run-tests.sh  seed.sh
streamlit_app/: app_streamlit.py  app_streamlit2.py
streamlit_llm_ui/: app_llm_chat.py
tests/: test_policy.py  test_process.py  test_rule.py  test_stats.py  test_transaction.py  test_user.py
