[project]
name = "llm_module"
version = "0.1.0"
description = ""
authors = [
    {name = "Hendri Karisma",email = "situkangsayur@gmail.com"}
]
readme = "README.md"
packages = [{ include = "llm_module" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.9.1"
streamlit = "^1.45.0"
pandas = "^2.2.3"
langgraph = "^0.4.0"
langchain = "^0.3.24"
langchain-community = "^0.3.23"
langchain-google-genai = "^2.1.3"
pypdf = "^5.4.0"
openai = "^1.76.2"
tiktoken = "^0.9.0"
sentence-transformers = "^4.1.0"
pymongo = "^4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
coverage = "^7.5.1"
mongomock = "^4.1.2"
mongomock-motor = "^0.0.21"
black = "^24.3.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
